--- a/Aszinkronitas/5-ajax/1-greet/index.html
+++ b/Aszinkronitas/5-ajax/1-greet/index.html
@@ -29,8 +29,10 @@
         <input type="text" name="username" placeholder="Felhasználónév: " required>
         <button type="submit">Belépés</button>
     </form>
+    <!-- hidden class-t le kéne szedni! -->
     <div class="data hidden" id="adatok">
-
+        <p>Név: Varga Csaba</p>
+        <p>Ismerősök száma: 522</p>
     </div>
 
     <div class="flex">
@@ -38,6 +40,6 @@
         <p>Eldöltött idő: <span id="time">0 mp</span></p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script-xhr.js"></script>
 </body>
 </html>
